# Formal-Languages-and-Automata-Toolkit

./: README.md
lfa/: CMakeLists.txt  input.txt  lfa1.cpp
lfa/include/: Automat.h  CFG.h  Input.h  Sigma.h  States.h  Transitions.h
lfa/src/: Automat.cpp  CFG.cpp  CFG.in  Input.cpp  Sigma.cpp  States.cpp  Transitions.cpp  aNbNcN.in  aSb.in  lfa1.cpp  main.cpp
